--- a/WpfApplication17/MainWindow.xaml
+++ b/WpfApplication17/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApplication17"
         mc:Ignorable="d"
-        Title="MainWindow" Height="768" Width="1366" WindowStyle="None" Loaded="Window_Loaded">
+        Title="MainWindow" Height="768" Width="1366" WindowStyle="None" Loaded="Window_Loaded" AllowsTransparency="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
