--- a/WpfApplication17/PageRegister.xaml
+++ b/WpfApplication17/PageRegister.xaml
@@ -25,7 +25,7 @@
 
                 </Button>
                 <TextBlock Text="asfkjkl" Foreground="#ffffff" Margin="15 0 0 0" FontSize="24"></TextBlock>
-             </StackPanel>
+            </StackPanel>
             <StackPanel Width="200" Margin="20 45 0 20" DockPanel.Dock="Left" HorizontalAlignment="Left" Background="#00879C">
                 <Button  x:Name="btnsdf" HorizontalAlignment="Left" Width="60" Style="{StaticResource MyButton}" Height="60" Margin="10,0,10,0"  BorderBrush="Transparent"  >
                     <Button.Background>
@@ -115,8 +115,10 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
@@ -135,8 +137,8 @@
                 <TextBox Name="txtwer" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26"  Padding="10 15" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" Margin="15 20 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
 
 
-                <TextBox Name="txt54tdf" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26" TextWrapping="Wrap" Height="150"  Padding="10 15" Grid.Row="3" Grid.Column="0" Grid.RowSpan="2" VerticalAlignment="Center" Margin="15 10 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
-                <ComboBox Name="cbObjects" Grid.Column="1" Grid.Row="3" Margin="15 20 15 0" Height="60" VerticalAlignment="Center"   >
+                <TextBox Name="txt54tdf" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26" TextWrapping="Wrap"  Padding="10 15" Grid.Row="3" Grid.Column="0"  VerticalAlignment="Center" Margin="15 10 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
+                <ComboBox Name="cbObjects" Grid.Column="1" Grid.Row="3" Margin="15 20 0 0" Height="60" VerticalAlignment="Center"   >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -146,7 +148,7 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <ComboBox Name="cbObjdf" Grid.Column="2" Grid.Row="3" Margin="15 20 15 0" Height="60" VerticalAlignment="Center"   >
+                <ComboBox Name="cbObjdf" Grid.Column="2" Grid.Row="3" Margin="15 20 0 0" Height="60" VerticalAlignment="Center"   >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -157,9 +159,80 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
 
-                <Button x:Name="BtnStartMatch" Grid.Row="4"  Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Top" Cursor="Hand" Margin="108,20,15,0"   Content="Save " Width="242" Style="{DynamicResource ButtonStyle2}" FontSize="20" FontWeight="SemiBold" Foreground="White"  Height="50"  />
+
+                <TextBox Name="txsdf" HorizontalAlignment="Stretch" Text="Enter Name" Grid.RowSpan="2" Height="150" FontSize="26"  Padding="10 15" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Margin="15 10 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
+                <TextBox Name="ssdfdf" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26"  Padding="10 15" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Margin="15 10 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
+                <TextBox Name="ssdfdsff" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26"  Padding="10 15" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" Margin="15 20 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
+
+
+
+
+
+                <Button x:Name="BtnStartMatch" Grid.Row="5"  Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Top" Cursor="Hand" Margin="108,20,15,0"   Content="Save " Width="242" Style="{DynamicResource ButtonStyle2}" FontSize="20" FontWeight="SemiBold" Foreground="White"  Height="50"  />
             </Grid>
         </Grid>
-        <DockPanel Background="#3f3f3f" Grid.Row="3"></DockPanel>
+        <DockPanel Background="#3f3f3f" Grid.Row="3">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <DockPanel Grid.Column="0">
+                    <StackPanel DockPanel.Dock="Right">
+                        <Button Style="{StaticResource MyButton}">
+                            <Canvas  x:Name="appbar_sort_alphabetical_ascending" Width="70" Height="70" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                                <Path Width="50" Height="50" Canvas.Left="10" Canvas.Top="10" Stretch="Fill" Fill="#FFf" Data="F1 M 62.25,43L 35.75,43L 49,29.7501L 62.25,43 Z M 28.9079,36L 28.1281,32.7344L 22.8358,32.7344L 21.9927,36L 16.25,36L 22.25,18L 28.75,18L 34.75,36L 28.9079,36 Z M 25.5433,22.1221L 25.4206,22.1221L 23.7502,28.9384L 27.1385,28.9384L 25.5433,22.1221 Z M 25,54L 33,54L 33,58L 19.006,58L 19.006,54.2515L 27,44L 19,44L 19,40L 33,40L 33,44L 25,54 Z "/>
+                            </Canvas>
+
+                        </Button>
+                        <TextBlock TextAlignment="Center" Foreground="#fff" FontSize="20"> New</TextBlock>
+                    </StackPanel>
+                    <StackPanel DockPanel.Dock="Right" Width="70">
+                        <Button Style="{StaticResource MyButton}">
+                            <Canvas  x:Name="appbar_sort_alphabetical_descending" Width="70" Height="70" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                                <Path Width="50" Height="50" Canvas.Left="10" Canvas.Top="10" Stretch="Fill" Fill="#FFf" Data="F1 M 62.25,34L 35.75,34L 49,47.25L 62.25,34 Z M 28.9079,36L 28.1281,32.7344L 22.8358,32.7344L 21.9927,36L 16.25,36L 22.25,18L 28.75,18L 34.75,36L 28.9079,36 Z M 25.5433,22.1221L 25.4206,22.1221L 23.7502,28.9384L 27.1385,28.9384L 25.5433,22.1221 Z M 25,54L 33,54L 33,58L 19.006,58L 19.006,54.2515L 27,44L 19,44L 19,40L 33,40L 33,44L 25,54 Z "/>
+                            </Canvas>
+
+                        </Button>
+                        <TextBlock TextAlignment="Center" Foreground="#fff" FontSize="20" >Delete</TextBlock>
+                    </StackPanel>
+
+                </DockPanel>
+                <DockPanel Grid.Column="1">
+                    <StackPanel DockPanel.Dock="Left">
+                        <Button Style="{StaticResource MyButton}">
+                            <Canvas x:Name="appbar_user_add" Width="70" Height="70" >
+                                <Path Width="50" Height="50" Canvas.Left="10" Canvas.Top="10" Stretch="Fill" Fill="#FFf" Data="F1 M 26.9167,38L 31.6667,38L 31.6667,45.9167L 39.5833,45.9167L 39.5833,50.6667L 31.6667,50.6667L 31.6667,58.5833L 26.9167,58.5833L 26.9167,50.6667L 19,50.6667L 19,45.9167L 26.9167,45.9167L 26.9167,38 Z M 38,19C 43.5417,19 45.9167,22.1667 45.1174,28.8134C 45.8315,29.2229 46.3125,29.9928 46.3125,30.875C 46.3125,31.9545 45.5923,32.8658 44.6061,33.1546C 44.1941,34.623 43.5543,35.9229 42.75,36.9628L 42.75,41.9583C 45.3889,42.4861 47.5,42.75 50.6667,44.3333C 53.8333,45.9167 54.8889,47.3681 57,49.4792L 57,57L 33.25,57L 33.25,52.25L 41.1667,52.25L 41.1666,44.3333L 33.25,44.3333L 33.25,36.9628L 33.25,36.4167L 32.8586,36.4167C 32.237,35.4811 31.7366,34.3762 31.3939,33.1546C 30.4077,32.8658 29.6875,31.9545 29.6875,30.875C 29.6875,29.9928 30.1685,29.2229 30.8826,28.8134C 30.0833,22.1667 32.4583,19 38,19 Z M 19,57L 19,52.25L 25.3333,52.25L 25.3333,57L 19,57 Z "/>
+                            </Canvas>
+
+                        </Button>
+                        <TextBlock TextAlignment="Center" Foreground="#fff" FontSize="20"> New</TextBlock>
+                    </StackPanel>
+                    <StackPanel DockPanel.Dock="Right">
+                        <Button Style="{StaticResource MyButton}">
+                            <Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="appbar_user_delete" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                                <Path Width="50" Height="50" Canvas.Left="10" Canvas.Top="10" Stretch="Fill" Fill="#FFf" Data="F1 M 15.8333,47.6921L 19.1921,44.3333L 24.79,49.9312L 30.3879,44.3333L 33.7467,47.6921L 28.1488,53.29L 33.7467,58.8879L 30.3879,62.2467L 24.79,56.6488L 19.1921,62.2467L 15.8333,58.8879L 21.4313,53.29L 15.8333,47.6921 Z M 38,19C 43.5417,19 45.9167,22.1667 45.1174,28.8134C 45.8315,29.2229 46.3125,29.9928 46.3125,30.875C 46.3125,31.9545 45.5923,32.8658 44.6061,33.1546C 44.1941,34.623 43.5543,35.9229 42.75,36.9628L 42.75,41.9583C 45.3889,42.4861 47.5,42.75 50.6667,44.3333C 53.8333,45.9167 54.8889,47.3681 57,49.4792L 57,57L 35.0254,57L 31.3154,53.29L 36.9134,47.6921L 31.4387,42.3108L 33.25,41.9583L 33.25,36.9628C 32.4457,35.9229 31.8059,34.623 31.3939,33.1546C 30.4077,32.8658 29.6875,31.9545 29.6875,30.875C 29.6875,29.9928 30.1685,29.2229 30.8826,28.8134C 30.0833,22.1667 32.4583,19 38,19 Z M 25.3333,44.3333C 26.5732,43.7134 27.6513,43.2957 28.6626,42.9853L 24.8366,46.8112L 23.4419,45.4165L 25.3333,44.3333 Z "/>
+                            </Canvas>
+
+                        </Button>
+                        <TextBlock TextAlignment="Center" Foreground="#fff" FontSize="20" >Delete</TextBlock>
+                    </StackPanel>
+                    <StackPanel >
+                        <Button Style="{StaticResource MyButton}">
+                            <Canvas x:Name="appbar_user_edit" Width="70" Height="70" >
+                                <Path Width="50.4259" Height="50.4259" Canvas.Left="10" Canvas.Top="6.57407" Stretch="Fill" Fill="#FFF" Data="F1 M 21.5367,46.0076L 19,57L 29.3932,54.6016C 28.0768,50.6411 25.8696,47.0904 21.5367,46.0076 Z M 39,53L 69.4259,22.5741C 67.0871,17.8183 63.7005,13.6708 59.5673,10.4327L 31,39L 31,45L 39,45L 39,53 Z M 29,38L 57.8385,9.1615C 56.438,8.19625 54.9638,7.33038 53.4259,6.57407L 24,36L 24,38L 29,38 Z "/>
+
+
+                            </Canvas>
+
+                        </Button>
+                        <TextBlock TextAlignment="Center" Foreground="#fff" FontSize="20" >Edit</TextBlock>
+                    </StackPanel>
+                </DockPanel>
+            </Grid>
+        </DockPanel>
     </Grid>
 </Page>
