--- a/WpfApplication17/App.xaml
+++ b/WpfApplication17/App.xaml
@@ -33,6 +33,16 @@
         <SolidColorBrush x:Key="Button.Disabled.Background" Color="#2e5a87"/>
         <SolidColorBrush x:Key="Button.Disabled.Border" Color="#2e5a87"/>
         <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#2e5a87"/>
+
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <Style x:Key="ButtonStyle2" TargetType="{x:Type Button}">
             <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
             <Setter Property="Background" Value="#336699"/>
