--- a/WpfApplication17/PageSettingRoType.xaml
+++ b/WpfApplication17/PageSettingRoType.xaml
@@ -86,14 +86,12 @@
                         <ColumnDefinition Width="*" />
 
                     </Grid.ColumnDefinitions>
-                    <TextBox Name="txtCaseName" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26"  Padding="10 15" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="15 00 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
-                    <TextBox Name="txtName" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26"  Padding="10 15" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="15 00 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
-                    <TextBox Name="txtas" HorizontalAlignment="Stretch" Text="Enter Name" FontSize="26"  Padding="10 15" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" Margin="15 00 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
+                    <TextBox Name="txtRTypeName" HorizontalAlignment="Stretch" Text="Enter Type" FontSize="26"  Padding="20 15" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="125 00 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
 
 
 
 
-                    <Button x:Name="BtnStartMatch" Grid.Row="5"  Grid.Column="2"  HorizontalAlignment="Center" VerticalAlignment="Top" Cursor="Hand" Margin="108,20,15,0"   Content="Save " Width="242" Style="{DynamicResource ButtonStyle2}" FontSize="20" FontWeight="SemiBold" Foreground="White"  Height="50"  />
+                    <Button x:Name="BtnAddRType" Grid.Row="2"  Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Top" Cursor="Hand" Margin="108,20,15,0"   Content="Save " Width="242" Style="{DynamicResource ButtonStyle2}" FontSize="20" FontWeight="SemiBold" Foreground="White"  Height="50" Click="BtnStartMatch_Click"  />
                 </Grid>
             </Grid>
             <DockPanel Background="#3f3f3f" Grid.Row="3">
